--- a/project/final/index.html
+++ b/project/final/index.html
@@ -418,7 +418,10 @@ map.on('load', function () {
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-
+              <a href="https://estherkwak.github.io/des157">portal</a> |
+          	  <a href="mailto:ejkwak@ucdavis.edu">email</a> |
+          	  <a href="https://validator.w3.org/check?uri=referer">valid html</a> |
+          	  <a href="https://jigsaw.w3.org/css-validator/check/referer">valid css</a>
           </div>
         </div>
       </div>
