--- a/project/final/index.html
+++ b/project/final/index.html
@@ -39,7 +39,7 @@
           <img class="" src="img/logo.png" alt="Pedal">
         </div>
 
-        <h1>Make biking your main form of transportaion</h1>
+        <h1>Make biking your main form of transportation</h1>
         <h2>Ride your bicycle today for a better <span class="rotating">world, lifestyle, future</span></h2>
         <div class="actions">
           <a href="#about" class="btn-get-started">About</a>
