--- a/project/final/index.html
+++ b/project/final/index.html
@@ -421,7 +421,7 @@ map.on('load', function () {
               <a href="https://estherkwak.github.io/des157">portal</a> |
           	  <a href="mailto:ejkwak@ucdavis.edu">email</a> |
           	  <a href="https://validator.w3.org/check?uri=referer">valid html</a> |
-          	  <a href="https://jigsaw.w3.org/css-validator/check/referer">valid css</a>
+          	  <a href="https://jigsaw.w3.org/css-validator/validator?uri=http%3A%2F%2Festherkwak.github.io%2Fdes157%2Fproject%2Ffinal%2Fcss%2Fstyle.css&profile=css3&usermedium=all&warning=1&vextwarning=&lang=en">valid css</a>
           </div>
         </div>
       </div>
