--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<li><a href="project/topicideas.html">Topic Brainstorm</a></li>
 					<li><a href="project/comparative.html">Comparative Research</a></li>
 					<li><a href="project/topicchoice.html">Topic Choice</a></li>
-					<li><a href="project/research.pdf">Research</a></li>
+					<li><a href="project/research.pdf">Background Research</a></li>
 					<li><a href="project/proposal1.pdf">ISEA Proposal Draft</a></li>
 					<li><a href="project/isea2017.pdf">ISEA Proposal</a></li>
 					<li><a href="project/isea2017.pdf">Needfinding</a></li>
@@ -61,15 +61,20 @@
 					<li><a href="project/audience.pdf">Audience research</a></li>
 					<li><a href="project/usergoals.pdf">User Goals</a></li>
 					<li><a href="project/storyboard.pdf">Storyboards</a></li>
+					<li><a href="project/paperproto.pdf">Paper prototypes</a></li>
 					<li><a href="project/siteflow.pdf">Site Flow</a></li>
 					<li><a href="project/userflow.pdf">User Flow</a></li>
 					<li><a href="project/wireframe.pdf">Wireframe</a></li>
-					<li><a href="project/paperproto.pdf">Paper prototypes</a></li>
 					<li><a href="project/proto1/index.html">Prototpye 1</a></li>
+					<li><a href="project/comps.pdf">Comps</a></li>
+					<li><a href="project/proto1/index.html">Style Tile</a></li>
 					<li><a href="project/proto1/index.html">Prototpye 2</a></li>
 					<li><a href="project/proto3/index.html">Prototpye 3</a></li>
+					<li><a href="project/proto1/index.html">Audience Test</a></li>
+					<li><a href="project/proto1/index.html">Audience Test Results</a></li>
 					<li><a href="project/audienceTestResults.html">Prototpye 3</a></li>
 					<li><a href="project/final/index.html">Final</a></li>
+					<li><a href="project/proto1/index.html">Presentation</a></li>
 				</ul>
 			</nav>
 
