--- a/project/audiencetest.html
+++ b/project/audiencetest.html
@@ -9,7 +9,7 @@
 
 <h1>Audience Test</h1>
 
-<p>My target audience test allowed me to test features of my website. I wanted to see how my users interact with the navigation bar, if they used the up-scroll arrow, and how they interacted with the map. These three features are critical aspects of my project and I wanted my audience to interact with these three features and explain where they had confusion, if any, and what they enjoyed about these features. </p>
+<p>My target audience test allows me to test features of my website. I wanted to see how my users interact with the navigation bar, if they used the up-scroll arrow, and how they interacted with the map. These three features are critical aspects of my project and I wanted my audience to interact with these three features and explain where they had confusion, if any, and what they enjoyed about these features. </p>
 
 <div class="photo">
 <img src="images/audiencetest.png" alt="audience testing project">
