--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<li><a href="project/wireframe.pdf">Wireframe</a></li>
 					<li><a href="project/proto1/index.html">Prototpye 1</a></li>
 					<li><a href="project/comps.pdf">Comps</a></li>
-					<li><a href="project/styletile.pdf">Style Tile</a></li>
+					<li><a href="project/styletile.jpg">Style Tile</a></li>
 					<li><a href="project/proto1/index.html">Prototpye 2</a></li>
 					<li><a href="project/proto3/index.html">Prototpye 3</a></li>
 					<li><a href="project/audiencetest.html">Audience Test</a></li>
