--- a/project/final/index.html
+++ b/project/final/index.html
@@ -284,15 +284,15 @@ map.on('load', function () {
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" name="message" data-rule="required" data-msg="Please write something for us" placeholder="Average cost per gallon of fuel"></input>
+                  <input class="form-control" name="message" data-rule="required" data-msg="Please write something for us" placeholder="Average cost per gallon of fuel" />
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" name="message" data-rule="required" data-msg="Please write something for us" placeholder="Average weekly parking cost"></input>
+                  <input class="form-control" name="message" data-rule="required" data-msg="Please write something for us" placeholder="Average weekly parking cost" />
                   <div class="validation"></div>
                 </div>
                 <div class="form-group">
-                  <input class="form-control" name="message" data-rule="required" data-msg="Please write something for us" placeholder="Daily bridge cost (if any)"></input>
+                  <input class="form-control" name="message" data-rule="required" data-msg="Please write something for us" placeholder="Daily bridge cost (if any)" />
                   <div class="validation"></div>
                 </div>
                 <div class="text-center"><button type="submit">Submit</button></div>
