--- a/project/final/index.html
+++ b/project/final/index.html
@@ -297,6 +297,7 @@ map.on('load', function () {
                 </div>
                 <div class="text-center"><button type="submit">Submit</button></div>
             </form>
+          </div>
         </div>
       </div>
     </div>
@@ -366,7 +367,6 @@ map.on('load', function () {
         <div class="col-md-5 col-md-push-2">
           <div class="form">
             <div id="sendmessage">Your message has been sent. Thank you!</div>
-            <div id="errormessage"></div>
             <form method="post" class="contactForm">
                 <div class="form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
