--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 					<li><a href="project/siteflow.pdf">Site Flow</a></li>
 					<li><a href="project/userflow.pdf">User Flow</a></li>
 					<li><a href="project/wireframe.pdf">Wireframe</a></li>
-					<li><a href="project/proto1/index.html">Prototpye 1</a></li>
+					<li><a href="project/proto1/index.html">Prototype 1</a></li>
 					<li><a href="project/comps.pdf">Comps</a></li>
 					<li><a href="project/images/styletile.jpg">Style Tile</a></li>
-					<li><a href="project/proto1/index.html">Prototpye 2</a></li>
-					<li><a href="project/proto3/index.html">Prototpye 3</a></li>
+					<li><a href="project/proto1/index.html">Prototype 2</a></li>
+					<li><a href="project/proto3/index.html">Prototype 3</a></li>
 					<li><a href="project/audiencetest.html">Audience Test</a></li>
 					<li><a href="project/audience_test_results.html">Audience Test Results</a></li>
-					<li><a href="project/proto3/index.html.html">Prototpye 3</a></li>
+					<li><a href="project/proto3/index.html.html">Prototype 3</a></li>
 					<li><a href="project/final/index.html">Final</a></li>
 					<li><a href="project/presentation.pdf">Presentation</a></li>
 				</ul>
